k8s/geocoder/apis/pelias-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-api
  namespace: geocoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelias-api
  template:
    metadata:
      annotations: 
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
      labels:
        app: pelias-api
    spec:
      containers:
        - name: pelias-api
          image: pelias/api:v5.60.0
          ports:
            - containerPort: 3100          
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          readinessProbe:
            httpGet:
              path: /status
              port: 3100
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 3100
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 20              
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        runAsNonRoot: true               
      volumes:
        - name: config-volume
          configMap:
            name: pelias-configmap 
            items:
              - key: pelias.json
                path: pelias.json
