k8s/geocoder/apis/pelias-api/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pelias-api
    namespace: geocoder
spec:
    selector:
        app: pelias-api
    ports:
        - protocol: TCP
          port: 3100
          targetPort: 3100
