k8s/geocoder/apis/pelias-api/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pelias-api-virtual-service
  namespace: geocoder
spec:
  gateways:
  - istio-ingress/mesh-gateway
  hosts:
  - "geocoder.alpha.phac.gc.ca"
  - "es.geocoder.alpha.phac.gc.ca"
  http:
  - name: gateway-to-pelias-api
    match:
    - uri:
        prefix: "/api/v1"
      authority:
        exact: "geocoder.alpha.phac.gc.ca"
    route:
    - destination:
        host: pelias-api.geocoder.svc.cluster.local
        port:
          number: 3100
  - name: gateway-to-frontend
    match:
    - uri:
        prefix: "/"
      authority:
        exact: "geocoder.alpha.phac.gc.ca"
    route:
    - destination:
        host: frontend.geocoder.svc.cluster.local
        port:
          number: 3000
  - name: gateway-to-pelias-dashboard
    match:
    - uri:
        prefix: "/"
      authority:
        exact: "es.geocoder.alpha.phac.gc.ca"
    route:
    - destination:
        host: pelias-dashboard.geocoder.svc.cluster.local
        port:
          number: 3030
